--- a/page1style.css
+++ b/page1style.css
@@ -1,1 +1,11 @@
-
+* {
+    margin: 3rem;
+}
+body {
+    font-family: 'Roboto';
+}
+h1 {
+    font-size: 4rem;
+    text-align: center;
+    color: white;
+}
