--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,7 @@ form {
 #Username {
     height: 20px;
     font-size: 1rem;
+    font-weight: 500px
 }
 select optgroup {
     font-family: 'Roboto';
