--- a/index.css
+++ b/index.css
@@ -9,7 +9,7 @@ h1 {
     color: white;
 }
 #StartGame {
-    align-items: center;
+    text-align: center;
     background-color: 'Red';
     border: none;
 }
