--- a/step1.css
+++ b/step1.css
@@ -28,7 +28,7 @@ form {
     font-size: 1rem;
 }
 select {
-    box-sizing: border-box;
+    height: 20px;
     font-family: 'Roboto';
     font-size: 1rem;
 }
