--- a/step1.css
+++ b/step1.css
@@ -28,6 +28,7 @@ form {
     font-size: 1rem;
 }
 select {
+    background: 'White';
     height: 20px;
     font-family: 'Roboto';
     font-size: 1rem;
