--- a/step1.css
+++ b/step1.css
@@ -28,8 +28,7 @@ form {
     font-size: 1rem;
 }
 select {
-    background: 'White';
-    height: 20px;
+    line-height: 20px;
     font-family: 'Roboto';
     font-size: 1rem;
 }
@@ -42,7 +41,7 @@ select optgroup {
     font-size: 1rem;
 }
 #Submit1 {
-    height: 20px;
+    line-height: 20px;
     width: 164px;
     background-color: Red;
     border: none;
