--- a/index.css
+++ b/index.css
@@ -9,6 +9,7 @@ h1 {
     color: White;
 }
 #StartGame {
+    align-items: center;
     line-height: 20px;
     width: 164px;
     background-color: Red;
@@ -17,6 +18,7 @@ h1 {
     font-size: 1rem;
 }
 #Tutorial {
+    align-items: center;
     line-height: 20px;
     width: 116px;
     background-color: Red;
