--- a/index.css
+++ b/index.css
@@ -8,8 +8,10 @@ h1 {
     text-align: center;
     color: White;
 }
-#StartGame {
+div {
     align-items: center;
+}
+#StartGame {
     line-height: 20px;
     width: 164px;
     background-color: Red;
@@ -18,7 +20,6 @@ h1 {
     font-size: 1rem;
 }
 #Tutorial {
-    align-items: center;
     line-height: 20px;
     width: 116px;
     background-color: Red;
